Footer issue of overlapping content fixed. Big image scrolling fixed.

--- a/style.css
+++ b/style.css
@@ -82,6 +82,12 @@ body {
 margin-bottom:60px;
 }
 
+img {
+ display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .footer {
 position:absolute;
 bottom:0;
